Fix long-press-event.min.js in prod.

--- a/src/jsMain/resources/ui/index.html
+++ b/src/jsMain/resources/ui/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
   <title>sparklemotion</title>
-  <script src="long-press-event.min.js"></script>
+  <script src="../long-press-event.min.js"></script>
   <link rel="stylesheet" href="../styles.css"/>
   <link rel="stylesheet" href="../react-mosaic-component.css"/>
   <link rel="stylesheet" href="../blueprintjs/icons/lib/css/blueprint-icons.css"/>
