--- a/src/jsMain/resources/monitor/index.html
+++ b/src/jsMain/resources/monitor/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <title>Admin | sparklemotion</title>
+  <link rel="icon" href="../favicon.png"/>
   <link rel="stylesheet" href="../styles.css"/>
-  <link rel="stylesheet" href="../fontawesome-free/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link rel="stylesheet" href="../fontawesome-free/css/all.min.css"/>
 </head>
 <body class="sparklemotion-admin">
 <div id="content">
