--- a/src/jsMain/resources/ui/index.html
+++ b/src/jsMain/resources/ui/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
   <title>sparklemotion</title>
   <script src="../long-press-event.min.js"></script>
+  <link rel="icon" href="../favicon.png"/>
   <link rel="stylesheet" href="../styles.css"/>
   <link rel="stylesheet" href="../react-mosaic-component.css"/>
-  <link rel="stylesheet" href="../fontawesome-free/css/all.min.css">
-  <link rel="stylesheet" href="../react-grid-layout/css/styles.css">
+  <link rel="stylesheet" href="../fontawesome-free/css/all.min.css"/>
+  <link rel="stylesheet" href="../react-grid-layout/css/styles.css"/>
 </head>
 <body class="sparklemotion-ui">
 <div id="content">
