Switch to local long-press-event dep.

--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
   <title>Simulator | sparklemotion</title>
-  <script src="long-press-event.min.js"></script>
+  <script src="lib/long-press-event/src/long-press-event.js"></script>
   <link rel="icon" href="favicon-sim.png"/>
   <link rel="stylesheet" href="styles.css"/>
   <link rel="stylesheet" href="react-mosaic-component.css"/>
-  <link rel="stylesheet" href="react-grid-layout/css/styles.css"/>
 </head>
 <body>
 <div id="app">
