Point at correct(?) JS executable.

--- a/shared/src/jsMain/resources/midi/index.html
+++ b/shared/src/jsMain/resources/midi/index.html
@@ -38,7 +38,7 @@
     }
 
     setTimeout(function () {
-      loadJs("../sparklemotion.js");
+      loadJs("../shared.js");
     });
   })();
 </script>
