--- a/shared/src/jsMain/resources/monitor/index.html
+++ b/shared/src/jsMain/resources/monitor/index.html
@@ -37,7 +37,7 @@
     }
 
     setTimeout(function () {
-      loadJs("../sparklemotion.js");
+      loadJs("../shared.js");
     });
   })();
 </script>
