--- a/shared/src/jsMain/resources/patch-editor.html
+++ b/shared/src/jsMain/resources/patch-editor.html
@@ -39,7 +39,7 @@
       document.head.appendChild(el);
     }
 
-    loadJs("sparklemotion.js");
+    loadJs("shared.js");
   });
 </script>
 </body>
