--- a/shared/src/jsMain/resources/ui/index.html
+++ b/shared/src/jsMain/resources/ui/index.html
@@ -45,7 +45,7 @@
     }
 
     setTimeout(function () {
-      loadJs("../sparklemotion.js");
+      loadJs("../shared.js");
     });
   })();
 </script>
