--- a/shared/src/jsMain/resources/index.html
+++ b/shared/src/jsMain/resources/index.html
@@ -40,7 +40,7 @@
       document.head.appendChild(el);
     }
 
-    loadJs("sparklemotion.js");
+    loadJs("shared.js");
   });
 </script>
 </body>
