--- a/shared/src/jsMain/resources/index.html
+++ b/shared/src/jsMain/resources/index.html
@@ -56,6 +56,17 @@
 <script type="application/javascript">
   document.resourcesBase = ".";
   document.sparklemotionMode = "Simulator";
+  window.addEventListener('beforeunload', () => {
+    document.body.appendChild(document.createElement('div')).innerHTML = `
+      <div style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 1000; display: flex; justify-content: center; align-items: center;">
+        <div style="background: white; color: black; padding: 1em; border: 2px solid black; font-family: 'Press Start 2P', monospace;">
+          <p>Reloading…</p>
+          <p>New stuff coming!</p>
+        </div>
+      </div>
+    `;
+  });
+
 
   setTimeout(function () {
     function loadJs(path) {
