Nicer "Patience..." loading page for small screens for regular UI.

--- a/shared/src/jsMain/resources/index.html
+++ b/shared/src/jsMain/resources/index.html
@@ -48,7 +48,7 @@
   <div style="display: flex; height: 100vh;">
     <div id="box">
       <img style="transform: scale(.5);" src="loading.gif" alt=""/>
-      <div id="_patience_" style=";">Patience...</div>
+      <div id="_patience_">Patience...</div>
     </div>
   </div>
 </div>
