Center "Patience…" loading messages.

--- a/shared/src/jsMain/resources/index.html
+++ b/shared/src/jsMain/resources/index.html
@@ -23,6 +23,7 @@
       }
 
       #_patience_ {
+          text-align: center;
           padding-right: 5em
       }
 
@@ -36,6 +37,7 @@
               height: auto;
           }
           #_patience_ {
+              text-align: center;
               padding-right: 0;
               padding-bottom: 2em;
               margin-top: -2em;
