--- a/shared/src/jsMain/resources/monitor/index.html
+++ b/shared/src/jsMain/resources/monitor/index.html
@@ -21,7 +21,7 @@
     align-items: center;
   ">
     <img style="transform: scale(.5);" src="../loading.gif" alt=""/>
-    <div id="_patience_" style="padding-right: 5em;">Patience...</div>
+    <div id="_patience_" style="text-align: center; padding-right: 5em;">Patience...</div>
   </div>
 </div>
 
