--- a/shared/src/jsMain/resources/ui/index.html
+++ b/shared/src/jsMain/resources/ui/index.html
@@ -23,7 +23,8 @@
       }
 
       #_patience_ {
-          padding-right: 5em
+        text-align: center;
+        padding-right: 5em
       }
 
       @media only screen
@@ -36,7 +37,8 @@
               height: auto;
           }
           #_patience_ {
-              padding-right: 0;
+            text-align: center;
+            padding-right: 0;
               padding-bottom: 2em;
               margin-top: -2em;
           }
